--- a/trunk/src/tracing/color_scheme_test.html
+++ b/trunk/src/tracing/color_scheme_test.html
@@ -13,11 +13,9 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-base.defineModule('color_scheme_test')
-    .dependsOn('unittest', 'color_scheme')
-    .runAllTests(function() {
-  return tests;
-});
+function testBasic() {
+}
+
 </script>
 </body>
 </html>
