Make cc.js and include that in key places instead of internal classes
Review URL: https://codereview.appspot.com/9036051

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -45,6 +45,7 @@ found in the LICENSE file.
 
   <script>
   base.require('tracing.timeline_view');
+  base.require('cc');
   </script>
   <script>
   'use strict';
