Make binding to first and last snapshots in an object instance more permissive
It is often the case that you will have this form:
  ts=5  ref to 0x1000
  ts=10 snapshot 0x1000

And similarly
  ts=10 snapshot 0x1000
  ts=15 snapshot 0x1000
  ts=20 ref to 0x1000

This change lets the first example bind to the snapshot at ts=10, and the the second
example bind to the snapshot at ts=15.

--- a/trunk/src/tracing/model/object_collection_test.html
+++ b/trunk/src/tracing/model/object_collection_test.html
@@ -55,6 +55,8 @@ found in the LICENSE file.
 
   function testTwoSnapshots() {
     var collection = new tracing.model.ObjectCollection({});
+    collection.idWasCreated(
+      '0x1000', 'cat', 'Frame', 10);
     collection.addSnapshot(
       '0x1000', 'cat', 'Frame', 10, {foo: 1});
     collection.addSnapshot(
