--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -7,7 +7,7 @@ found in the LICENSE file.
 -->
 <head i18n-values="dir:textdirection;">
 <title>Simple Embedded Viewer</title>
-<script src="../src/base.js"></script>
+<script src="/src/base.js"></script>
 <style>
   .view {
     overflow: hidden;
