--- a/trunk/examples/multi_timeline.html
+++ b/trunk/examples/multi_timeline.html
@@ -91,6 +91,7 @@ found in the LICENSE file.
     var timelineViewEl = document.createElement('div');
     ui.decorate(timelineViewEl, tracing.TimelineView);
     timelineViewEl.focusElement = containerEl;
+    timelineViewEl.viewTitle = src;
 
     parentEl.appendChild(titleEl);
     parentEl.appendChild(containerEl);
