--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -36,6 +36,7 @@ found in the LICENSE file.
     <option value="tall_trace.json">tall trace</option>
     <option value="trivial_trace.json">trivial trace</option>
     <option value="picture_trace.json">picture trace</option>
+    <option value="theverge_trace.json">theverge trace</option>
     <option value="v8.log">v8</option>
   </select>
   </div>
