Add SliceView: a way to customize the display of a slice
Use this to make clicking RasterTasks more helpful

R=dsinclair@chromium.org, pdr@chromium.org

Review URL: https://codereview.appspot.com/9816045

--- a/trunk/src/base/settings_test.html
+++ b/trunk/src/base/settings_test.html
@@ -64,14 +64,14 @@ function testSetInvalidObject() {
   var obj = {'hello': undefined};
   obj.hello = obj;
   assertThrows(function() {
-    settings.set('my_key', obj)
+    settings.set('my_key', obj);
   });
 }
 
 function testSetUndefined() {
   var settings = new base.Settings();
   assertThrows(function() {
-    settings.set('my_key', undefined)
+    settings.set('my_key', undefined);
   });
 }
 
