--- a/trunk/src/tracing/importer/trace_event_importer_test.html
+++ b/trunk/src/tracing/importer/trace_event_importer_test.html
@@ -10,6 +10,7 @@ found in the LICENSE file.
 <script src="/src/base.js"></script>
 <script>
   base.require('base.unittest');
+  base.require('base.quad');
   base.require('tracing.test_utils');
   base.require('tracing.importer.trace_event_importer');
 </script>
