Refactor to bring viewports under camera control, part 1.
Rename quad_stack.content to quad_stack.contentContainer

Refactor to extract deviceViewport drawing code.

Combine the lthi.deviceViewportSize into the quad_view_viewport

Refactor quad_stack to extract camera. No new function or test.

BUG=225
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10063043

--- a/trunk/src/ui/quad_stack_test.html
+++ b/trunk/src/ui/quad_stack_test.html
@@ -34,8 +34,9 @@ found in the LICENSE file.
 
     var stack = new QuadStack();
     stack.quads = quads;
-    stack.viewport = new ui.QuadViewViewport(quadsBbox, 0.5);
-    stack.deviceViewportSizeForFrame = {width: 100, height: 100};
+    var deviceViewportSizeForFrame = {width: 100, height: 100};
+    stack.viewport = new ui.QuadViewViewport(quadsBbox,
+        0.5, deviceViewportSizeForFrame);
     stack.style.border = '1px solid black';
 
     this.addHTMLOutput(undefined, stack);
