--- a/trunk/src/ui/quad_view_viewport_test.html
+++ b/trunk/src/ui/quad_view_viewport_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
       bbox.addXY(0, 0);
       bbox.addXY(4000, 2000);
 
-      var vp = new QuadViewViewport(bbox, 0.125, 0, 2);
+      var vp = new QuadViewViewport(bbox, 0.125, null, 0, 2);
       assertEquals(500, vp.deviceWidth);
       assertEquals(250, vp.deviceHeight);
 
@@ -53,7 +53,7 @@ found in the LICENSE file.
       bbox.addXY(0, 0);
       bbox.addXY(4000, 2000);
 
-      var vp = new QuadViewViewport(bbox, 0.125, 0.1, 2);
+      var vp = new QuadViewViewport(bbox, 0.125, null, 0.1, 2);
       assertEquals(550, vp.deviceWidth);
       assertEquals(300, vp.deviceHeight);
 
